debug: add comprehensive Sparkle logging and ZIP verification
- Log all appcast items and their properties
- Log signature presence and public key
- Log detailed error information (domain, code, userInfo)
- Add delegate methods for download/extract events
- Verify ZIP integrity in workflow
- Show ZIP contents for debugging
- This will help identify the exact validation failure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -326,6 +326,14 @@ jobs:
         echo "✅ Appcast updated"
         echo "📋 New entry:"
         sed -n '/<item>/,/<\/item>/p' appcast.xml | head -15
+        
+        # Verify the ZIP can be extracted
+        echo "🔍 Verifying ZIP integrity..."
+        unzip -t "$ZIP_FILE" || echo "⚠️ ZIP verification failed"
+        
+        # Show ZIP contents
+        echo "📋 ZIP contents:"
+        unzip -l "$ZIP_FILE" | head -20
     
     - name: Commit appcast changes
       if: steps.check_tag.outputs.exists == 'false'
