--- a/GhostKey/Info.plist
+++ b/GhostKey/Info.plist
@@ -25,6 +25,10 @@
 	<integer>86400</integer>
 	<key>SUPublicEDKey</key>
 	<string>QoKujmo/JsKLgma1uSy1SFkcwFK2chU7kDcoS5B+km8=</string>
+	<key>SUEnableInstallerLauncherService</key>
+	<false/>
+	<key>SUEnableSystemProfiling</key>
+	<false/>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0.0</string>
 	<key>CFBundleVersion</key>
