--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -23,6 +23,47 @@ jobs:
       with:
         xcode-version: latest-stable
     
+    - name: Install Apple Certificate
+      run: |
+        echo "🔐 Installing Developer ID certificate..."
+        
+        # Decode certificate
+        echo "${{ secrets.APPLE_CERTIFICATE_BASE64 }}" | base64 --decode > certificate.p12
+        
+        # Create temporary keychain
+        KEYCHAIN_PATH=$RUNNER_TEMP/build.keychain
+        KEYCHAIN_PASSWORD=$(openssl rand -base64 32)
+        
+        security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+        security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+        security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+        
+        # Import certificate to keychain
+        security import certificate.p12 \
+          -P "${{ secrets.APPLE_CERTIFICATE_PASSWORD }}" \
+          -k "$KEYCHAIN_PATH" \
+          -T /usr/bin/codesign \
+          -T /usr/bin/security
+        
+        # Set keychain as default
+        security list-keychains -d user -s "$KEYCHAIN_PATH" $(security list-keychains -d user | sed s/\"//g)
+        security default-keychain -s "$KEYCHAIN_PATH"
+        
+        # Enable codesigning from a non user interactive shell
+        security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+        
+        # Clean up certificate file
+        rm -f certificate.p12
+        
+        # Store keychain path for cleanup
+        echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> $GITHUB_ENV
+        echo "KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> $GITHUB_ENV
+        
+        echo "✅ Certificate installed successfully"
+        
+        # Verify certificate
+        security find-identity -v -p codesigning "$KEYCHAIN_PATH"
+    
     - name: Build app
       run: |
         echo "🔨 Building GhostKey..."
@@ -31,9 +72,9 @@ jobs:
           -scheme GhostKey \
           -configuration Debug \
           -derivedDataPath ./build \
-          CODE_SIGN_IDENTITY="" \
-          CODE_SIGNING_REQUIRED=NO \
-          CODE_SIGNING_ALLOWED=NO
+          CODE_SIGN_STYLE=Manual \
+          CODE_SIGN_IDENTITY="${{ vars.APPLE_CODE_SIGN_IDENTITY }}" \
+          DEVELOPMENT_TEAM="${{ vars.APPLE_TEAM_ID }}"
         
         echo "✅ Build successful"
     
@@ -47,6 +88,18 @@ jobs:
         fi
         
         echo "✅ App bundle found at: $APP_PATH"
+    
+    - name: Cleanup keychain
+      if: always()
+      run: |
+        echo "🧹 Cleaning up keychain..."
+        
+        if [ -n "$KEYCHAIN_PATH" ]; then
+          security delete-keychain "$KEYCHAIN_PATH" || true
+          echo "✅ Keychain deleted"
+        else
+          echo "⚠️  No keychain to clean up"
+        fi
     
     - name: Build summary
       run: |
