--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -234,6 +234,9 @@ jobs:
           --context .changelog-context.json \
           --release-count 0
         
+        echo "📋 Generated CHANGELOG (first 20 lines):"
+        head -20 CHANGELOG.md
+        
         # Add release link and channel badge to the version header
         if [ "$CHANNEL" != "stable" ]; then
           CHANNEL_BADGE="**[$CHANNEL]** "
@@ -241,14 +244,30 @@ jobs:
           CHANNEL_BADGE=""
         fi
         
-        # Escape special characters in version for regex
-        VERSION_ESCAPED=$(echo "$VERSION" | sed 's/[.]/\\./g')
+        # Escape special characters in version for regex (dots and dashes)
+        VERSION_ESCAPED=$(echo "$VERSION" | sed 's/\./\\./g; s/-/\\-/g')
+        
+        echo "🔍 Looking for pattern: ^## \[${VERSION_ESCAPED}\]"
         
         # Find the first version header and enhance it with release link
-        # Use | as delimiter to avoid conflicts with / in URLs
-        # Replace ## [version] with ## [channel badge] [version](release-link)
-        sed -i.bak "0,/^## \[\($VERSION_ESCAPED\)\]/s|^## \[\($VERSION_ESCAPED\)\]|## ${CHANNEL_BADGE}[\1]($REPO_URL/releases/tag/v\1)|" CHANGELOG.md
+        # conventional-changelog generates: ## [version](compare-link) (date)
+        # We want to change it to: ## [channel badge] [version](release-link) (date)
+        
+        # First try to match the pattern with compare link and date
+        if grep -q "^## \[${VERSION}\]" CHANGELOG.md; then
+          echo "✅ Found version header with brackets"
+          # Replace the version with version + release link, preserving any date/compare links
+          sed -i.bak "0,/^## \[${VERSION_ESCAPED}\]/s|^## \[${VERSION_ESCAPED}\]|## ${CHANNEL_BADGE}[${VERSION}](${REPO_URL}/releases/tag/v${VERSION})|" CHANGELOG.md
+        else
+          echo "⚠️  Version header not found in expected format"
+          echo "📋 Searching for alternative patterns..."
+          grep "^##" CHANGELOG.md | head -5
+        fi
+        
         rm -f CHANGELOG.md.bak
+        
+        echo "📋 Modified CHANGELOG (first 20 lines):"
+        head -20 CHANGELOG.md
         
         # Clean up
         rm -f .changelog-context.json
