--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -1,14 +1,15 @@
 name: PR Build Check
 
 on:
-  pull_request:
-    branches:
-      - main
-      - dev
-    paths-ignore:
-      - '**.md'
-      - '.gitignore'
-      - 'LICENSE'
+  workflow_dispatch:
+  # pull_request:
+  #   branches:
+  #     - main
+  #     - dev
+  #   paths-ignore:
+  #     - '**.md'
+  #     - '.gitignore'
+  #     - 'LICENSE'
 
 jobs:
   build:
