--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -1,15 +1,14 @@
 name: PR Build Check
 
 on:
-  workflow_dispatch:
-  # pull_request:
-  #   branches:
-  #     - main
-  #     - dev
-  #   paths-ignore:
-  #     - '**.md'
-  #     - '.gitignore'
-  #     - 'LICENSE'
+   pull_request:
+     branches:
+       - main
+       - dev
+     paths-ignore:
+       - '**.md'
+       - '.gitignore'
+       - 'LICENSE'
 
 jobs:
   build:
