--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -7,8 +7,6 @@ on:
       - main
       - beta
       - dev
-    paths-ignore:
-      - 'CHANGELOG.md'
 
 permissions:
   contents: write
@@ -105,6 +103,7 @@ jobs:
           })
     
     - name: Checkout PR branch
+      if: github.event.action != 'edited'
       uses: actions/checkout@v4
       with:
         ref: ${{ github.head_ref }}
@@ -112,14 +111,17 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Setup Node.js
+      if: github.event.action != 'edited'
       uses: actions/setup-node@v4
       with:
         node-version: '18'
     
     - name: Install conventional-changelog
+      if: github.event.action != 'edited'
       run: npm install -g conventional-changelog-cli
     
     - name: Determine version and channel
+      if: github.event.action != 'edited'
       id: version
       run: |
         BRANCH="${{ github.base_ref }}"
@@ -210,6 +212,7 @@ jobs:
         echo "🚀 Version for CHANGELOG: $FULL_VERSION (base: $BASE_VERSION, channel: $CHANNEL)"
     
     - name: Generate CHANGELOG entry
+      if: github.event.action != 'edited'
       run: |
         VERSION="${{ steps.version.outputs.version }}"
         CHANNEL="${{ steps.version.outputs.channel }}"
@@ -275,12 +278,13 @@ jobs:
         echo "✅ CHANGELOG generated with release link"
     
     - name: Check for changes
+      if: github.event.action != 'edited'
       id: check_changes
       run: |
         git diff --quiet CHANGELOG.md || echo "changed=true" >> $GITHUB_OUTPUT
     
     - name: Commit CHANGELOG changes
-      if: steps.check_changes.outputs.changed == 'true'
+      if: github.event.action != 'edited' && steps.check_changes.outputs.changed == 'true'
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -292,7 +296,7 @@ jobs:
         echo "✅ CHANGELOG committed to PR branch"
     
     - name: Comment on PR
-      if: steps.check_changes.outputs.changed == 'true'
+      if: github.event.action != 'edited' && steps.check_changes.outputs.changed == 'true'
       uses: actions/github-script@v7
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -323,7 +327,7 @@ jobs:
           })
     
     - name: No changes needed
-      if: steps.check_changes.outputs.changed != 'true'
+      if: github.event.action != 'edited' && steps.check_changes.outputs.changed != 'true'
       run: |
         echo "ℹ️  CHANGELOG is already up to date"
         echo "✅ PR title is valid: ${{ github.event.pull_request.title }}"
