--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -110,18 +110,32 @@ jobs:
         fetch-depth: 0
         token: ${{ secrets.GITHUB_TOKEN }}
     
-    - name: Setup Node.js
+    - name: Check if CHANGELOG was modified
       if: github.event.action != 'edited'
+      id: check_changelog_modified
+      run: |
+        # Check if CHANGELOG.md was modified in the latest commit
+        if git diff --name-only HEAD~1 HEAD | grep -q "^CHANGELOG.md$"; then
+          echo "📋 CHANGELOG.md was modified in the latest commit"
+          echo "⏭️  Skipping CHANGELOG generation"
+          echo "modified=true" >> $GITHUB_OUTPUT
+        else
+          echo "✅ CHANGELOG.md was not modified, proceeding with generation"
+          echo "modified=false" >> $GITHUB_OUTPUT
+        fi
+    
+    - name: Setup Node.js
+      if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true'
       uses: actions/setup-node@v4
       with:
         node-version: '18'
     
     - name: Install conventional-changelog
-      if: github.event.action != 'edited'
+      if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true'
       run: npm install -g conventional-changelog-cli
     
     - name: Determine version and channel
-      if: github.event.action != 'edited'
+      if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true'
       id: version
       run: |
         BRANCH="${{ github.base_ref }}"
@@ -212,7 +226,7 @@ jobs:
         echo "🚀 Version for CHANGELOG: $FULL_VERSION (base: $BASE_VERSION, channel: $CHANNEL)"
     
     - name: Generate CHANGELOG entry
-      if: github.event.action != 'edited'
+      if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true'
       run: |
         VERSION="${{ steps.version.outputs.version }}"
         CHANNEL="${{ steps.version.outputs.channel }}"
@@ -278,13 +292,13 @@ jobs:
         echo "✅ CHANGELOG generated with release link"
     
     - name: Check for changes
-      if: github.event.action != 'edited'
+      if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true'
       id: check_changes
       run: |
         git diff --quiet CHANGELOG.md || echo "changed=true" >> $GITHUB_OUTPUT
     
     - name: Commit CHANGELOG changes
-      if: github.event.action != 'edited' && steps.check_changes.outputs.changed == 'true'
+      if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true' && steps.check_changes.outputs.changed == 'true'
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -296,7 +310,7 @@ jobs:
         echo "✅ CHANGELOG committed to PR branch"
     
     - name: Comment on PR
-      if: github.event.action != 'edited' && steps.check_changes.outputs.changed == 'true'
+      if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true' && steps.check_changes.outputs.changed == 'true'
       uses: actions/github-script@v7
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -327,7 +341,7 @@ jobs:
           })
     
     - name: No changes needed
-      if: github.event.action != 'edited' && steps.check_changes.outputs.changed != 'true'
+      if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true' && steps.check_changes.outputs.changed != 'true'
       run: |
         echo "ℹ️  CHANGELOG is already up to date"
         echo "✅ PR title is valid: ${{ github.event.pull_request.title }}"
